Added dask calculation

--- a/examples/python/Accumulated_prec_amount_from_radar_GeoTiff.ipynb
+++ b/examples/python/Accumulated_prec_amount_from_radar_GeoTiff.ipynb
@@ -25,33 +25,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: rasterio[s3] in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (1.1.5)\n",
-      "Requirement already satisfied: snuggs>=1.4.1 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from rasterio[s3]) (1.4.7)\n",
-      "Requirement already satisfied: attrs in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from rasterio[s3]) (18.1.0)\n",
-      "Requirement already satisfied: affine in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from rasterio[s3]) (2.3.0)\n",
-      "Requirement already satisfied: numpy in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from rasterio[s3]) (1.18.1)\n",
-      "Requirement already satisfied: click<8,>=4.0 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from rasterio[s3]) (6.7)\n",
-      "Requirement already satisfied: click-plugins in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from rasterio[s3]) (1.1.1)\n",
-      "Requirement already satisfied: cligj>=0.5 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from rasterio[s3]) (0.5.0)\n",
-      "Requirement already satisfied: boto3>=1.2.4; extra == \"s3\" in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from rasterio[s3]) (1.12.39)\n",
-      "Requirement already satisfied: pyparsing>=2.1.6 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from snuggs>=1.4.1->rasterio[s3]) (2.2.0)\n",
-      "Requirement already satisfied: jmespath<1.0.0,>=0.7.1 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from boto3>=1.2.4; extra == \"s3\"->rasterio[s3]) (0.9.4)\n",
-      "Requirement already satisfied: botocore<1.16.0,>=1.15.39 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from boto3>=1.2.4; extra == \"s3\"->rasterio[s3]) (1.15.39)\n",
-      "Requirement already satisfied: s3transfer<0.4.0,>=0.3.0 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from boto3>=1.2.4; extra == \"s3\"->rasterio[s3]) (0.3.3)\n",
-      "Requirement already satisfied: docutils<0.16,>=0.10 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from botocore<1.16.0,>=1.15.39->boto3>=1.2.4; extra == \"s3\"->rasterio[s3]) (0.14)\n",
-      "Requirement already satisfied: python-dateutil<3.0.0,>=2.1 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from botocore<1.16.0,>=1.15.39->boto3>=1.2.4; extra == \"s3\"->rasterio[s3]) (2.7.3)\n",
-      "Requirement already satisfied: urllib3<1.26,>=1.20; python_version != \"3.4\" in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from botocore<1.16.0,>=1.15.39->boto3>=1.2.4; extra == \"s3\"->rasterio[s3]) (1.23)\n",
-      "Requirement already satisfied: six>=1.5 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from python-dateutil<3.0.0,>=2.1->botocore<1.16.0,>=1.15.39->boto3>=1.2.4; extra == \"s3\"->rasterio[s3]) (1.11.0)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install rasterio[s3]"
    ]
@@ -114,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_timestep(bucket, key, lat, lon, mode='rr', timestep=300):\n",
+    "def process_timestep(bucket, key, x, y, mode='rr', timestep=300):\n",
     "    \"\"\" Process time step\n",
     "    \n",
     "    bucket   : str \n",
@@ -134,13 +110,8 @@
     "    -------\n",
     "    float \n",
     "         Precipitation amount in millimeters\n",
-    "    \"\"\"\n",
-    "\n",
-    "    transformer = Transformer.from_crs(\"epsg:4326\", \"epsg:3067\")\n",
-    "    x,y = transformer.transform(lat, lon)\n",
-    "    \n",
+    "    \"\"\"    \n",
     "    with rio.open('s3://{}/{}'.format(bucket, key)) as src:\n",
-    "        #print(src.profile)\n",
     "        for val in src.sample([(x, y)]):\n",
     "            if mode == 'rr':\n",
     "                return val[0]*.01*timestep/3600\n",
@@ -163,7 +134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_time_range(bucket, starttime, endtime, lat, lon, timestep, mode = 'rr', filename_start='', filename_end='_SUOMI500-rr.tif'):\n",
+    "def process_time_range(bucket, starttime, endtime, lat, lon, timestep, mode = 'rr', filename_start='geotiff/', filename_end='_SUOMI500-rr.tif'):\n",
     "    \"\"\" Process time range \n",
     "    bucket    : str \n",
     "                S3 bucket name (where radar images exist)\n",
@@ -194,12 +165,15 @@
     "    \n",
     "    start = roundTime(datetime.strptime(starttime, '%Y-%m-%d %H:%M:%S'))\n",
     "    end = roundTime(datetime.strptime(endtime, '%Y-%m-%d %H:%M:%S'))    \n",
-    "    time_it = start\n",
+    "    time_it = start    \n",
+    "    \n",
+    "    transformer = Transformer.from_crs(\"epsg:4326\", \"epsg:3067\")\n",
+    "    x,y = transformer.transform(lat, lon)\n",
     "    \n",
     "    prec_sum = 0\n",
     "    while time_it <= end:\n",
     "        key = '{}{}{}'.format(filename_start, time_it.strftime('%Y%m%d%H%M'), filename_end)\n",
-    "        prec_sum += process_timestep(bucket, key, lat, lon, timestep=timestep)\n",
+    "        prec_sum += process_timestep(bucket, key, x, y, timestep=timestep)\n",
     "\n",
     "        if time_it.minute == 0: print('{:.2f}'.format(prec_sum), end='')\n",
     "        else: print('.', end='')\n",
@@ -221,26 +195,160 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "bucket = 'fmi-radar-opendata-sandbox'\n",
+    "starttime = '2020-07-11 00:00:00'\n",
+    "endtime = '2020-07-11 23:59:00'\n",
+    "lat = 63.1593\n",
+    "lon = 29.8346"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.00...........0.00...........0.03...........0.08...........0.09...........0.09...........0.09...........0.28...........0.30...........0.93...........2.14...........2.21...........2.51...........4.24...........4.63...........4.63...........5.13...........8.11...........8.11...........8.11...........8.11...........8.11...........8.11...........8.11...........8.11\n",
-      "Precipitation sum at 63.1593,29.8346 (Koli, Finland) on 10th July 2020 is 8.11 mm\n"
+      "0.00...........0.00...........0.00...........0.00...........0.00...........0.00...........0.00...........0.00...........0.00...........0.00...........0.00...........0.02...........0.61...........3.26...........9.86...........11.49...........12.91...........17.49...........19.29...........19.86...........20.08...........20.08...........20.08...........20.08...........20.08\n",
+      "Precipitation sum at 63.1593,29.8346 (Koli, Finland) on 11th July 2020 is 20.08 mm\n"
      ]
     }
    ],
    "source": [
+    "prec_sum = process_time_range(bucket, starttime, endtime, lat, lon, 300)\n",
+    "print('Precipitation sum at {},{} (Koli, Finland) on 11th July 2020 is {:.2f} mm'.format(lat,lon,prec_sum))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dask version\n",
+    "\n",
+    "As the above computation contains almost 300 geotiff images to process, it does take some time. If we want to calculate precipitation sum over longer period or do some other heavy computation, it may be good idea to distritbute the calculation. Following example shows how this can achieved using Dask (https://docs.dask.org/en/latest/). "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First we need to install the envinronment. This example does not cover installing dask but all assets used to setup the dask cluster are included in the repository. A good tutorial for setting up the cluster can be found at: https://towardsdatascience.com/serverless-distributed-data-pre-processing-using-dask-amazon-ecs-and-python-part-1-a6108c728cc4\n",
+    "\n",
+    "To use the cluster, we need several libraries to be installed. Following commands install the require libraries. Versions of each libraries are defined as they need to mach with the cluster."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip uninstall -y enum34\n",
+    "!pip install blosc==1.8.3\n",
+    "!pip install --upgrade joblib==0.15.1 dask[dataframe]==2.12.0 distributed==2.12.0 lz4==3.0.2 cloudpickle==1.3.0 msgpack==1.0.0 numpy==1.18.1 toolz==0.10.0 tornado==6.0.4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we import necessary libraries and initialize dask client"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dask.distributed import Client\n",
+    "from dask import delayed\n",
+    "import dask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = Client('Dask-Scheduler.local-dask:8786')\n",
+    "client"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we can define necessary variables. These are the same as in previous example except that we have a longer time range and we use start and end times as DateTime object."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "bucket = 'fmi-radar-opendata-sandbox'\n",
-    "starttime = '2020-07-10 00:00:00'\n",
-    "endtime = '2020-07-10 23:59:00'\n",
     "lat = 63.1593\n",
     "lon = 29.8346\n",
-    "\n",
-    "prec_sum = process_time_range(bucket, starttime, endtime, lat, lon, 300)\n",
-    "print('Precipitation sum at {},{} (Koli, Finland) on 10th July 2020 is {:.2f} mm'.format(lat,lon,prec_sum))"
+    "timestep=300\n",
+    "filename_start='geotiff/'\n",
+    "filename_end='_SUOMI500-rr.tif'\n",
+    "starttime = datetime.strptime('2020-07-11 00:00:00', \"%Y-%m-%d %H:%M:%S\")\n",
+    "endtime = datetime.strptime('2020-07-15 23:59:00', \"%Y-%m-%d %H:%M:%S\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Computing is also almost similar to local version. We go through the time steps but instead of directly calculating the value, we define the calculation and call dask to compute all at once. Dask handles the distribution and gathering results."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precipitation sum at 63.1593,29.8346 (Koli, Finland) on between 11th Jul 2020 - 15th Jul 2020 is 28.77 mm\n"
+     ]
+    }
+   ],
+   "source": [
+    "transformer = Transformer.from_crs(\"epsg:4326\", \"epsg:3067\")\n",
+    "x,y = transformer.transform(lat, lon)\n",
+    "\n",
+    "dfs, df = [], []\n",
+    "time_it = starttime\n",
+    "while time_it <= endtime:\n",
+    "    key = '{}{}{}'.format(filename_start, time_it.strftime('%Y%m%d%H%M'), filename_end)\n",
+    "    dfs.append(delayed(process_timestep)(bucket, key, x, y, timestep=timestep))\n",
+    "    time_it +=  timedelta(seconds=timestep)\n",
+    "\n",
+    "df = dask.compute(*dfs)\n",
+    "\n",
+    "print('Precipitation sum at {},{} (Koli, Finland) on between {} - {} is {:.2f} mm'.format(lat,\n",
+    "                                                                                          lon,\n",
+    "                                                                                          starttime.strftime('%dth %b %Y'), \n",
+    "                                                                                          endtime.strftime('%dth %b %Y'), \n",
+    "                                                                                          sum(df)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -259,7 +367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
