Use real buckets

--- a/examples/python/Accumulated_prec_amount_from_radar_GeoTiff.ipynb
+++ b/examples/python/Accumulated_prec_amount_from_radar_GeoTiff.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,12 @@
     "    with rio.open('s3://{}/{}'.format(bucket, key)) as src:\n",
     "        for val in src.sample([(x, y)]):\n",
     "            if mode == 'rr':\n",
+    "                # From https://en.ilmatieteenlaitos.fi/open-data-manual-radar-data\n",
     "                return val[0]*.01*timestep/3600\n",
+    "            elif mode == 'dbz':\n",
+    "                # From https://en.wikipedia.org/wiki/DBZ_(meteorology)\n",
+    "                dbz = 0.5 * val[0] - 32\n",
+    "                return (10**(dbz/10)/200)**(5/8)*timestep/3600\n",
     "            else:\n",
     "                raise Exception('mode not implemented')\n",
     "        \n",
@@ -130,11 +135,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_time_range(bucket, starttime, endtime, lat, lon, timestep, mode = 'rr', filename_start='geotiff/', filename_end='_SUOMI500-rr.tif'):\n",
+    "def process_time_range(bucket, starttime, endtime, lat, lon, timestep, mode = 'rr', filename_start='FIN-DBZ-3067-250M/', filename_end='_FIN-DBZ-3067-250M.tif'):\n",
     "    \"\"\" Process time range \n",
     "    bucket    : str \n",
     "                S3 bucket name (where radar images exist)\n",
@@ -172,7 +177,12 @@
     "    \n",
     "    prec_sum = 0\n",
     "    while time_it <= end:\n",
-    "        key = '{}{}{}'.format(filename_start, time_it.strftime('%Y%m%d%H%M'), filename_end)\n",
+    "        key = '{year}/{month}/{day}/{prefix}{stamp}{suffix}'.format(year=time_it.strftime('%Y'),\n",
+    "                                                                    month=time_it.strftime('%m'),\n",
+    "                                                                    day=time_it.strftime('%d'),\n",
+    "                                                                    stamp=time_it.strftime('%Y%m%d%H%M'),\n",
+    "                                                                    prefix=filename_start,\n",
+    "                                                                    suffix=filename_end)\n",
     "        prec_sum += process_timestep(bucket, key, x, y, timestep=timestep)\n",
     "\n",
     "        if time_it.minute == 0: print('{:.2f}'.format(prec_sum), end='')\n",
@@ -193,33 +203,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bucket = 'fmi-radar-opendata-sandbox'\n",
-    "starttime = '2020-07-11 00:00:00'\n",
-    "endtime = '2020-07-11 23:59:00'\n",
+    "bucket = 'fmi-opendata-radar-geotiff'\n",
+    "starttime = '2020-09-06 00:00:00'\n",
+    "endtime = '2020-09-06 23:59:00'\n",
     "lat = 63.1593\n",
     "lon = 29.8346"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.00...........0.00...........0.00...........0.00...........0.00...........0.00...........0.00...........0.00...........0.00...........0.00...........0.00...........0.02...........0.61...........3.26...........9.86...........11.49...........12.91...........17.49...........19.29...........19.86...........20.08...........20.08...........20.08...........20.08...........20.08\n",
-      "Precipitation sum at 63.1593,29.8346 (Koli, Finland) on 11th July 2020 is 20.08 mm\n"
+      "0.06...........0.10...........0.17...........0.17...........0.17...........0.17...........0.17...........0.17...........0.17...........0.17...........0.17...........0.17...........0.17...........0.17...........0.17...........0.17...........0.17...........0.17...........0.17...........0.21...........0.24...........0.56...........0.91...........1.32...........1.67\n",
+      "Precipitation sum at 63.1593,29.8346 (Koli, Finland) on 11th July 2020 is 1.67 mm\n",
+      "CPU times: user 8.6 s, sys: 389 ms, total: 8.99 s\n",
+      "Wall time: 1min 53s\n"
      ]
     }
    ],
    "source": [
-    "prec_sum = process_time_range(bucket, starttime, endtime, lat, lon, 300)\n",
+    "%%time\n",
+    "prec_sum = process_time_range(bucket, starttime, endtime, lat, lon, 300, 'dbz')\n",
     "print('Precipitation sum at {},{} (Koli, Finland) on 11th July 2020 is {:.2f} mm'.format(lat,lon,prec_sum))"
    ]
   },
@@ -249,7 +262,7 @@
    "source": [
     "!pip uninstall -y enum34\n",
     "!pip install blosc==1.8.3\n",
-    "!pip install --upgrade joblib==0.15.1 dask[dataframe]==2.12.0 distributed==2.12.0 lz4==3.0.2 cloudpickle==1.3.0 msgpack==1.0.0 numpy==1.18.1 toolz==0.10.0 tornado==6.0.4"
+    "!pip install --upgrade joblib==0.16 dask[dataframe]==2.25.0 distributed==2.25.0 lz4==3.1.0 cloudpickle==1.6.0 msgpack numpy==1.19.1 toolz tornado blosc==1.7.0"
    ]
   },
   {
@@ -261,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,9 +285,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table style=\"border: 2px solid white;\">\n",
+       "<tr>\n",
+       "<td style=\"vertical-align: top; border: 0px solid white\">\n",
+       "<h3 style=\"text-align: left;\">Client</h3>\n",
+       "<ul style=\"text-align: left; list-style: none; margin: 0; padding: 0;\">\n",
+       "  <li><b>Scheduler: </b>tcp://Dask-Scheduler.local-dask:8786</li>\n",
+       "  <li><b>Dashboard: </b><a href='http://Dask-Scheduler.local-dask:8787/status' target='_blank'>http://Dask-Scheduler.local-dask:8787/status</a></li>\n",
+       "</ul>\n",
+       "</td>\n",
+       "<td style=\"vertical-align: top; border: 0px solid white\">\n",
+       "<h3 style=\"text-align: left;\">Cluster</h3>\n",
+       "<ul style=\"text-align: left; list-style:none; margin: 0; padding: 0;\">\n",
+       "  <li><b>Workers: </b>2</li>\n",
+       "  <li><b>Cores: </b>8</li>\n",
+       "  <li><b>Memory: </b>34.36 GB</li>\n",
+       "</ul>\n",
+       "</td>\n",
+       "</tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<Client: 'tcp://172.31.35.74:8786' processes=2 threads=8, memory=34.36 GB>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "client = Client('Dask-Scheduler.local-dask:8786')\n",
     "client"
@@ -284,23 +329,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we can define necessary variables. These are the same as in previous example except that we have a longer time range and we use start and end times as DateTime object."
+    "Now we can define necessary variables. Here we use the same values with previous example."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bucket = 'fmi-radar-opendata-sandbox'\n",
+    "bucket = 'fmi-opendata-radar-geotiff'\n",
     "lat = 63.1593\n",
     "lon = 29.8346\n",
     "timestep=300\n",
-    "filename_start='geotiff/'\n",
-    "filename_end='_SUOMI500-rr.tif'\n",
-    "starttime = datetime.strptime('2020-07-11 00:00:00', \"%Y-%m-%d %H:%M:%S\")\n",
-    "endtime = datetime.strptime('2020-07-15 23:59:00', \"%Y-%m-%d %H:%M:%S\")"
+    "filename_start='FIN-DBZ-3067-250M/'\n",
+    "filename_end='_FIN-DBZ-3067-250M.tif'\n",
+    "starttime = datetime.strptime('2020-09-06 00:00:00', \"%Y-%m-%d %H:%M:%S\")\n",
+    "endtime = datetime.strptime('2020-09-06 23:59:00', \"%Y-%m-%d %H:%M:%S\")"
    ]
   },
   {
@@ -312,26 +357,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Precipitation sum at 63.1593,29.8346 (Koli, Finland) on between 11th Jul 2020 - 15th Jul 2020 is 28.77 mm\n"
+      "Precipitation sum at 63.1593,29.8346 (Koli, Finland) on between 06th Sep 2020 - 06th Sep 2020 is 0.08 mm\n",
+      "CPU times: user 693 ms, sys: 33.1 ms, total: 726 ms\n",
+      "Wall time: 28.8 s\n"
      ]
     }
    ],
    "source": [
+    "%%time\n",
     "transformer = Transformer.from_crs(\"epsg:4326\", \"epsg:3067\")\n",
     "x,y = transformer.transform(lat, lon)\n",
     "\n",
     "dfs, df = [], []\n",
     "time_it = starttime\n",
     "while time_it <= endtime:\n",
-    "    key = '{}{}{}'.format(filename_start, time_it.strftime('%Y%m%d%H%M'), filename_end)\n",
-    "    dfs.append(delayed(process_timestep)(bucket, key, x, y, timestep=timestep))\n",
+    "    key = '{year}/{month}/{day}/{prefix}{stamp}{suffix}'.format(year=time_it.strftime('%Y'),\n",
+    "                                                                month=time_it.strftime('%m'),\n",
+    "                                                                day=time_it.strftime('%d'),\n",
+    "                                                                stamp=time_it.strftime('%Y%m%d%H%M'),\n",
+    "                                                                prefix=filename_start,\n",
+    "                                                                suffix=filename_end)\n",
+    "    dfs.append(delayed(process_timestep)(bucket, key, x, y, timestep=timestep, mode='dbz'))\n",
     "    time_it +=  timedelta(seconds=timestep)\n",
     "\n",
     "df = dask.compute(*dfs)\n",
