--- a/examples/python/radar-rhi-from-hdf5.ipynb
+++ b/examples/python/radar-rhi-from-hdf5.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Cross section from radar HDF5-files"
+    "# Pro HDF5-files"
    ]
   },
   {
