--- a/examples/python/radar-rhi-from-hdf5.ipynb
+++ b/examples/python/radar-rhi-from-hdf5.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pro HDF5-files"
+    "# Visualising HDF5-files"
    ]
   },
   {
@@ -20,10 +20,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, the environment. `gdal, dask, arm_pyart, xarray, h5py, h5netcdf, tqdm` are required for these examples wradlib https://docs.wradlib.org/en/stable/) and Py-ART (https://arm-doe.github.io/pyart/) being the main libraries. These notebooks are created with Amazon Sagemaker and environment are setup with following commands:\n",
+    "First, the environment. `gdal, dask, xarray, h5py, h5netcdf, tqdm` are required for these examples wradlib https://docs.wradlib.org/en/stable/) being the main library. These notebooks are created with Amazon Sagemaker and environment are setup with following commands:\n",
     "```\n",
     "yum install -y --enablerepo=\"epel\" netcdf4-python gdal gdal-python\n",
-    "conda create -c conda-forge --name fmiopendata python=3.6 ipykernel gdal dask arm_pyart xarray h5py h5netcdf tqdm boto3 wradlib\n",
+    "conda create -c conda-forge --name fmiopendata python=3.6 ipykernel gdal dask xarray h5py h5netcdf tqdm boto3 wradlib\n",
     "python -m ipykernel install --user --name fmiopendata --display-name \"fmiopendata\"\n",
     "conda env export --name fmiopendata --file ~/fmiopendata.yml\n",
     "```\n",
@@ -53,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Unfortunately wradlib and Py-ART have only partial support for remote files so we need to download processed files to local tmp directory. Following function will do:"
+    "Unfortunately wradlib has only partial support for remote files so we need to download processed files to local tmp directory. Following function will do:"
    ]
   },
   {
